[tool.poetry]
name = "simple_test_packet"
version = "0.1.0"
description = ""
authors = ["Dima Abramovich <abramovich_d@rocketdata.io>"]

homepage = "https://github.com/rofar91/simple-test-packet"
repository = "https://github.com/rofar91/simple-test-packet"
documentation = "https://github.com/rofar91/simple-test-packet/README.rst"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
