[tool.poetry]
name = "simple_test_packet"
version = "0.2.2"
description = ""
authors = ["Dima Abramovich <abramovich_d@rocketdata.io>"]

readme = "README.rst"
license = "MIT"
homepage = "https://github.com/rofar91/simple-test-packet"
repository = "https://github.com/rofar91/simple-test-packet"
documentation = "https://github.com/rofar91/simple-test-packet"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "simple_test_packet.main:start"